<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ListTab</class>
 <widget class="QWidget" name="ListTab">
  <property name="windowTitle">
   <string notr="true">Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout_2">
   <item>
    <layout class="QHBoxLayout" name="hl0">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QListWidget" name="listWidget">
         <property name="minimumSize">
          <size>
           <width>200</width>
           <height>0</height>
          </size>
         </property>
         <property name="selectionMode">
          <enum>QAbstractItemView::ExtendedSelection</enum>
         </property>
        </widget>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <widget class="QLineEdit" name="filterLineEdit">
           <property name="placeholderText">
            <string>SEARCH</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QVBoxLayout" name="vl1">
       <item>
        <layout class="QHBoxLayout" name="form"/>
       </item>
       <item>
        <layout class="QHBoxLayout" name="hl2_1">
         <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>40</width>
             <height>20</height>
            </size>
           </property>
          </spacer>
         </item>
         <item>
          <widget class="QPushButton" name="autonumberingB">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>AUTOMATIC_NUMBERING</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="addAllButton">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>ADD_ALL</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="clearB">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>CLEAR</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="resetButton">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>RESET</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="applyButton">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>APPLY</string>
           </property>
          </widget>
         </item>
         <item>
          <spacer name="horizontalSpacer_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>40</width>
             <height>20</height>
            </size>
           </property>
          </spacer>
         </item>
        </layout>
       </item>
      </layout>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
